turmites.lessons.turmites.turmitecreator.TurmiteCreator.scala.error
Turmite:47: error: illegal start of simple expression
  rule = [[[1,8,0],[1,8,0]],[[0,0,0],[0,0,1]]]
         ^